<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/cus_dialog_shape"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/show_terminal_dialog_layoutt_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dip"
            android:text="@string/please_set_terminal_infor"
            android:textColor="@color/common_text_color"
            android:textSize="22sp" />



        <View
            android:id="@+id/show_terminal_dialog_layout_v_bottom_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@color/common_line_color" />

        <LinearLayout
            android:id="@+id/show_terminal_dialog_layout_ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/show_terminal_dialog_layout_tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/common_item_click_selector"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/common_hint_text_color"
                android:textSize="16sp" />

            <View
                android:id="@+id/show_terminal_dialog_layout_v_mid"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/common_line_color" />

            <TextView
                android:id="@+id/show_terminal_dialog_layout_tv_set"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/common_item_click_selector"
                android:gravity="center"
                android:text="@string/to_setting"
                android:textColor="@color/common_blue"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>