<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:mAttr="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
    <com.starlight.mobile.android.lib.view.CusHeadView
        android:id="@+id/main_layout_ch_head"
        style="@style/common_head_blue_style"

        mAttr:chHead_title="@string/remote_interview"
        mAttr:chHead_title_padding_left="0dip"
        mAttr:chHead_leftImg="@mipmap/ic_back"
        />
    <include layout="@layout/i_common_loading_layout"/>
    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:fillViewport="true"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/call_user_layout_ll_card"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="350dip">
                <ImageView
                    android:id="@+id/call_user_layout_iv_card_01"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_imageloading"
                    android:scaleType="fitXY"
                    android:layout_margin="10dp"/>

                <ImageView
                    android:id="@+id/call_user_layout_iv_card_02"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_imageloading"
                    android:scaleType="fitXY"
                    android:layout_margin="10dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/call_user_layout_tv_meeting_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meeting_notice"
                android:textSize="24sp"
                android:lineSpacingExtra="10dp"
                android:padding="10dp"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/call_user_layout_bt_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:layout_weight="0"
        android:onClick="onClickListener"
        android:background="@drawable/common_blue_btn_selector"
        android:text="@string/call"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:enabled="false"/>
</LinearLayout>

